# pong

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  deploy_web.sh  index.html  pong.data  pong.js  pong.wasm
.github/workflows/: linux.yml  macos.yml  webassembly.yml  windows.yml
projects/VS2022/: pong.sln
projects/VS2022/pong/: pong.vcxproj
projects/VS2022/raylib/: raylib.vcxproj
src/: .clang-format  Info.plist  Makefile  helpers.c  helpers.h  minshell.html  pallet.c  pallet.h  pong.c  pong.h  pong.rc  pung.c  pung.rc  screen_ending.c  screen_gameplay.c  screen_instructions.c  screen_start.c  screen_title.c  screens.h  timer.c  timer.h
src/resources/: LICENSE.md
